--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    
+
     <h1>Je suis un titre h1 et je suis en rouge</h1>
     <h2>Je suis un titre h2 et je suis en bleu</h2>
-    <p class="grand">je suis un grand paragraphe en gras avec un fond rouge</p>
-    <h4 class="souligne">je suis un h4 présentant tous les jours de la semaines et souligné</h4>
+    <p class="grand">Je suis un grand paragraphe en gras avec un fond rouge</p>
+    <h4 class="souligne">je suis un h4 présentant tous les jours de la semaines et souligner</h4>
     <ol>
         <li class="italic">Lundi</li>
         <li class="italic">Mardi</li>
