--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
     <h2>Je suis un titre h2 et je suis en bleu</h2>
     <p class="grand">Je suis un grand paragraphe en gras avec un fond rouge</p>
     <h4 class="souligne">je suis un h4 présentant tous les jours de la semaines et souligner</h4>
-    <ol>
-        <li class="italic">Lundi</li>
-        <li class="italic">Mardi</li>
-        <li class="italic">Mercredi</li>
-        <li class="italic">Jeudi</li>
-        <li class="italic">Vendredi</li>
-        <li class="italic">Samedi</li>
-        <li class="italic">Dimanche</li>
+    <ol class="italic">
+        <li>Lundi</li>
+        <li>Mardi</li>
+        <li>Mercredi</li>
+        <li>Jeudi</li>
+        <li>Vendredi</li>
+        <li>Samedi</li>
+        <li>Dimanche</li>
     </ol>
     <h4 class="gras">je suis un h4 présentant des choses à faire aujourd'hui</h4>
-    <ul>
-        <li class="italic">Acheter un croissant pour le petit déjeuner</li>
-        <li class="italic">Donner cours</li>
-        <li class="italic">Faire des pauses</li>
-        <li class="italic">Joueur un foot</li>
-        <li class="italic">Dormir</li>
+    <ul class="italic">
+        <li>Acheter un croissant pour le petit déjeuner</li>
+        <li>Donner cours</li>
+        <li>Faire des pauses</li>
+        <li>Joueur un foot</li>
+        <li>Dormir</li>
     </ul>
 </body>
 </html>
